fixing group
